# susbot

./: .gitignore  Cargo.toml  flake.nix  readme.md  result
src/: emojis.rs  emojis.txt  main.rs
