[package]
name = "susbot"
version = "0.2.0"
authors = ["Jamie Quigley <jamie@quigley.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.10"
clap = { version = "3.1.17", features = ["derive"] }
tokio = {version = "1.17", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
rand = "0.8.5"

[dependencies.serenity]
default-features=false
features=["client", "gateway", "rustls_backend", "model", "cache"]
version = "0.11.1"

[features]
